# clidict

./: README.md  cambridge_parser.py.backup  camdict.spec  clidict.spec  pyproject.toml
camdict/: __init__.py  __main__.py  completer.py  config.py  http.py  render.py
camdict/parsers/: __init__.py  bing.py  cambridge.py  qianyix.py
clidict/: __init__.py  __main__.py  completer.py  config.py  http.py  render.py
clidict/parsers/: bing.py  cambridge.py  qianyix.py
completions/: camdict.bash  camdict.fish  clidict.bash  clidict.fish
tests/: test_bing.py  test_parser.py  test_qianyix.py
